@@ -7,12 +7,6 @@ cd $(dirname $0)
 
 PROJECT=$(osc status | sed -n '1 { s/.* //; p; }')
 
-if [ $PROJECT = $PROD ]; then
-  REPLICAS=2
-else
-  REPLICAS=1
-fi
-
 osc create -f - <<EOF || true
 kind: ImageStream
 apiVersion: v1beta1
@@ -48,7 +42,7 @@ items:
     strategy:
       type: Recreate
     controllerTemplate:
-      replicas: $REPLICAS
+      replicas: 1
       replicaSelector:
         service: restapis
         function: application
@@ -66,6 +60,8 @@ items:
               - containerPort: 8778
                 name: jolokia
               env:
+              - name: JAVA_OPTS
+                value: "-server -XX:+UseCompressedOops -verbose:gc -Xloggc:/opt/eap/standalone/log/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading -Xms128m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.logmanager -Djava.awt.headless=true -Djboss.modules.policy-permissions=true -Xbootclasspath/p:/opt/eap/jboss-modules.jar:/opt/eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-1.5.4.Final-redhat-1.jar:/opt/eap/modules/system/layers/base/org/jboss/logmanager/ext/main/javax.json-1.0.4.jar:/opt/eap/modules/system/layers/base/org/jboss/logmanager/ext/main/jboss-logmanager-ext-1.0.0.Alpha2-redhat-1.jar -Djava.util.logging.manager=org.jboss.logmanager.LogManager -javaagent:/opt/eap/jolokia.jar=port=8778,host=0.0.0.0,discoveryEnabled=false"
 #              - name: ENABLE_JPDA
 #                value: "true"
               - name: DB_SERVICE_PREFIX_MAPPING
